@@ -7,9 +7,11 @@ This is the changelog for the fosite project.
 #### Changed
 #### Deprecated
 #### Removed
+- variables/arrays in sources_base
 #### Fixes
 - key printing feature in read.py repaired
 - parallel usage of restart.f90 repaired (missing unit number)
+- finalizing asl-library on SX caused no calculations in fftw-interface
 
 ## 0.8.0 - 2018-01-08
 ### Initial version
